--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,8 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="defaultActivityStyle" parent="@android:style/Animation.Activity">
+        <item name="android:windowNoTitle">true</item>
+    </style>
+
 </resources>
